codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__file_change_notifications_render_only_the_edited_log_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▌ edited 5 files +4 -3                           │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▌          M src/app.rs                          │▎+ New session  Ctrl+N
 ▌          A src/new.rs                          │▎loading sessions
 ▌          D src/old.rs                          │
 ▌          R src/from.rs -> src/to.rs            │▎◆ THREAD
                                                  │▎stage-one
                                                  │▎id 01900000-0000-7000-8000-000000000001
                                                  │▎resume, fork, archive, delete in session list
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
