codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__goal_slash_command_sets_and_shows_thread_goal.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
──────────────────────────────────────────────────│━━━━━━━━━━──────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
                                                │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ CODEX  Started a fullscreen app shell backed ┃ │▎loading sessions
          by app-server turns.                  ┃ │
 ▎ PLAN  1. Build shell                         ┃ │▎◆ TOOLS
         2. Wire transcript                     ┃ │▎in progress exec just test -p codex-tui
         3. Render dashboard                    ┃ │▎completed file changes in app_shell
                                                ┃ │
 ▌ tool exec just test -p codex-tui             ┃ │▎◆ THREAD
                                                ┃ │▎stage-one
 ▌ edited 3 files +128 -24                      ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▎ STATUS  goal set: Ship the standalone shell  ┃ │▎resume, fork, archive, delete in session list
 ▎ STATUS  goal active. Objective: Ship the     ┃ │
           standalone shell Time: 1m.           ┃ │▎◆ STATUS
                                                ┃ │▎thinking
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │▎◆ GOAL
                                                  │▎status active
╭────────────────────────────────────────────────╮│▎Ship the standalone shell
│◆ MESSAGE  1:1                                  ││▎1m | 12,345 tokens
│> Type a message, Shift+Enter for newline       ││
│                                                ││▎◆ PLAN
│                                                ││▎Build the standalone shell in slices.
╰────────────────────────────────────────────────╯│
