codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__help_dashboard_48_by_16_scrolled.snap
---
source: tui/src/app_shell_tests.rs
expression: scrolled
---
  Dashboard  ◆ BC    gpt-5-codex ▾   default ▾
────────────────────────────────────────────────
│
│  Status   │  Agents   │  Sessions   │  Help
│ f           Fork     │ ◆ AGENTS
│ a           Archive  │  ↵           Focus/log
│ u           Unarchive│  ↑↓ / jk     Select
│ v           Switch v…│  g / G       First/la…
│ n           Rename   │  r           Reload l…
│ /           Search   │
│ d           Delete   │
│
╭──────────────────────────────────────────────╮
│◆ MESSAGE  1:37                               │
│> Summarize the new shell architecture        │
╰──────────────────────────────────────────────╯
