codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__help_dashboard_shows_every_shortcut_at_78_by_24_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: rendered
---

  Dashboard  ◆ BC           gpt-5-codex ▾   default ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────
                            │
 ◆ CONVERSATION             │   Status   │  Agents   │  Sessions   │  Help
 ▎ YOU  Create a divergent s│⌘←→⌫ line · ⌥/^ word   │ ^N new · Sess ↵ focus
                            │S/A↵ newline · Fn none │ r/f resume/fork
 ▎ CODEX  Started a fullscre│↵ send  ^C/Esc×2 exit  │ a/u/v/d arc/show/del
 ▎ PLAN  1. Build shell     │Alt+↑/^O select/copy   │ n rename  / search
         2. Wire transcript │Alt+M/E model/effort   │ Agent ↵ focus/log · j/k
         3. Render dashboard│^1 Status · ^2 Agents  │ Tab/j/k nav · ↵ apply
                            │^3 Sessions · ^4 Help  │ Esc×2 exit · ^D hide
 ▌ tool exec just test -p co│
                            │
 ▌ edited 3 files +128 -24  │
                            │
 ▎ CODEX  The new shell owns│
                            │
╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                             │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
